--- a/app/src/main/res/layout/dialog_notify.xml
+++ b/app/src/main/res/layout/dialog_notify.xml
@@ -23,6 +23,7 @@
                 android:layout_height="80dp"
                 android:layout_gravity="center"
                 android:tint="@color/colorPrimary"
+                android:layout_marginBottom="15dp"
                 android:src="@drawable/ic_verified_user"/>
 
             <TextView
@@ -45,15 +46,16 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:background="@color/overlay_dark_10">
 
             </View>
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="45dp"
                 android:background="@color/white"
                 android:text="Ver lista de Alertas"
+                android:padding="10dp"
                 android:textColor="@color/colorPrimary"
                 android:id="@+id/btnver"
                 />
