--- a/app/src/main/res/layout/rcv_item_list_quejas.xml
+++ b/app/src/main/res/layout/rcv_item_list_quejas.xml
@@ -2,22 +2,19 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginBottom="5dp"
     android:layout_height="wrap_content"
+    android:background="#F0F0F0"
     xmlns:app="http://schemas.android.com/apk/res-auto">
   <android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp">
-      
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:cardCornerRadius="10dp"
+      android:layout_margin="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="10dp"
         android:layout_height="wrap_content">
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,10 +107,7 @@
 
 
 
-
-
-
-        <LinearLayout
+       <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -122,12 +116,14 @@
                     android:id="@+id/txt_descripcionQueja"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_gravity="center"
-                    android:textColor="#757575"
+                    android:textColor="@color/light_blue_400"
                     android:textSize="15dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
                     android:text="Delanterojjnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjhbhhbhbhbhhhhhhhhhhhhhhhh"
                     android:textStyle="italic" />
 
@@ -170,7 +166,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:layout_gravity="center_vertical"
                 android:orientation="horizontal">
 
