--- a/app/src/main/res/layout/fragment_list_mis_alertas.xml
+++ b/app/src/main/res/layout/fragment_list_mis_alertas.xml
@@ -11,6 +11,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="15dp"
         android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,7 +47,13 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rcv_misalertashechas_pendientes"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:text=""/>
 
 
         </LinearLayout>
