--- a/app/src/main/res/layout/fragment_mis_atenciones.xml
+++ b/app/src/main/res/layout/fragment_mis_atenciones.xml
@@ -47,6 +47,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:text=""/>
+
 
         </LinearLayout>
 
