cambio en clase preferencias

--- a/app/src/main/res/layout/activity_gpsinactivo.xml
+++ b/app/src/main/res/layout/activity_gpsinactivo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,32 +7,17 @@
     android:layout_height="match_parent"
     android:background="@drawable/gps"
     android:orientation="vertical"
+    android:gravity="center|bottom"
     tools:context=".Activitys.GPSinactivo">
 
         <Button
             android:layout_width="wrap_content"
             android:id="@+id/activar"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="582dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="2dp"
-            android:background="@drawable/bgnoseleccionado"
             android:text="@string/activar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.29000002" />
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="40dp"
 
-
-
-
-
-
-
-
-</android.support.constraint.ConstraintLayout>
+            android:background="@drawable/blanco_redondo"
+            android:textColor="@color/colorPrimary"/>
+</RelativeLayout>
