--- a/app/src/main/res/layout/rcv_item_list_quejas.xml
+++ b/app/src/main/res/layout/rcv_item_list_quejas.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:background="#F0F0F0"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -142,7 +143,7 @@
                     android:id="@+id/prog_fotoPublicacion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:theme="@style/CircularProgress"
                     android:layout_marginTop="50dp"
                     android:layout_centerInParent="true"/>
