--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".Fragments.FeedFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,13 +28,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/rcv_quejas"
                 android:layout_width="match_parent"
-                android:paddingBottom="10dp"
-                android:background="#F0F0F0"
-                android:layout_height="match_parent">
-
-
+                android:layout_height="wrap_content"
+                android:id="@+id/post_list">
             </android.support.v7.widget.RecyclerView>
 
         </android.support.v4.widget.SwipeRefreshLayout>
@@ -84,4 +77,10 @@
         android:layout_height="wrap_content"
         android:theme="@style/CircularProgress"
         android:layout_gravity="center"/>
-</android.support.design.widget.CoordinatorLayout>
+
+
+
+    <!-- TODO: Update blank fragment layout -->
+
+
+</FrameLayout>
