--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -82,7 +82,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/distritoPerfil"
-                                android:text="Mobile development passionate."
+                                android:text=""
                                 android:textColor="#ffffff"
                                 android:textSize="12sp" />
 
