--- a/app/src/main/res/layout/content_pueblo_opina.xml
+++ b/app/src/main/res/layout/content_pueblo_opina.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_pueblo_opina">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
     <Button
