--- a/app/src/main/res/layout/activity_mapa_alertas.xml
+++ b/app/src/main/res/layout/activity_mapa_alertas.xml
@@ -10,6 +10,7 @@
 
 
 
+
     <fragment
         android:id="@+id/map_SeguimientoAlertas"
         android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -18,7 +19,16 @@
         />
 
 
-    <RelativeLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ToolbarColoredBackArrow"
+        android:background="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.Toolbar>
+
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <android.support.v7.widget.Toolbar
@@ -112,15 +122,14 @@
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
-    </RelativeLayout>
+    </RelativeLayout>-->
 
 
-
-    <!--<include
+    <include
       android:id="@+id/bottomJsoft"
       layout="@layout/bottomsheet_layout">
 
-    </include>-->
+    </include>
 
 
 
